Closed
Bug 1305655
Opened 9 years ago
Closed 9 years ago
../../../dist/include/GrallocImages.h:96:43: error: 'GetTextureClient' declared as a 'virtual' field
Categories
(Firefox OS Graveyard :: GonkIntegration, defect)
Tracking
(firefox52 fixed)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: gerard-majax, Assigned: gerard-majax)
References
Details
Attachments
(1 file, 7 obsolete files)
16.91 KB,
patch
|
gerard-majax
:
review+
|
Details | Diff | Splinter Review |
https://hg.mozilla.org/integration/mozilla-inbound/rev/b7ead4d4eb90ac9e8f112574dc194691e507658e
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=b7ead4d4eb90&filter-tier=1&filter-tier=2&filter-tier=3&selectedJob=36497577
../../../dist/include/GrallocImages.h:96:43: error: 'GetTextureClient' declared as a 'virtual' field
../../../dist/include/GrallocImages.h:96:26: error: expected ';' at end of member declaration
../../../dist/include/GrallocImages.h:96:59: error: expected ')' before '*' token
../../../dist/include/mozilla/layers/GrallocTextureClient.h:77:3: error: 'virtual mozilla::layers::TextureData* mozilla::layers::GrallocTextureData::CreateSimilar(mozilla::layers::LayersIPCChannel*, mozilla::layers::TextureFlags, mozilla::layers::TextureAllocationFlags) const' marked override, but does not override
../../../dist/include/mozilla/layers/TextureClient.h:281:3: error: 'virtual mozilla::layers::TextureData* mozilla::layers::TextureData::CreateSimilar(mozilla::layers::LayersIPCChannel*, mozilla::layers::LayersBackend, mozilla::layers::TextureFlags, mozilla::layers::TextureAllocationFlags) const' was hidden [-Werror=overloaded-virtual]
../../../dist/include/mozilla/layers/GrallocTextureClient.h:77:3: error: by 'virtual mozilla::layers::TextureData* mozilla::layers::GrallocTextureData::CreateSimilar(mozilla::layers::LayersIPCChannel*, mozilla::layers::TextureFlags, mozilla::layers::TextureAllocationFlags) const' [-Werror=overloaded-virtual]
make[6]: *** [Unified_cpp_dom_media_webrtc0.o] Error 1
Assignee | ||
Comment 1•9 years ago
|
||
Assignee | ||
Comment 2•9 years ago
|
||
Attachment #8795186 -
Attachment is obsolete: true
Assignee | ||
Comment 3•9 years ago
|
||
Assignee | ||
Comment 4•9 years ago
|
||
Attachment #8795227 -
Attachment is obsolete: true
Assignee | ||
Comment 5•9 years ago
|
||
Attachment #8795254 -
Attachment is obsolete: true
Assignee | ||
Comment 6•9 years ago
|
||
Attachment #8795276 -
Attachment is obsolete: true
Attachment #8795279 -
Flags: review?(nical.bugzilla)
Updated•9 years ago
|
Attachment #8795279 -
Flags: review?(nical.bugzilla) → review+
Assignee | ||
Comment 7•9 years ago
|
||
Attachment #8795279 -
Attachment is obsolete: true
Attachment #8795313 -
Flags: review+
Assignee | ||
Comment 8•9 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=7bbbba1eb1ce
MozReview-Commit-ID: 1sUiqnFEPdx
Attachment #8795313 -
Attachment is obsolete: true
Attachment #8795330 -
Flags: review+
Assignee | ||
Comment 9•9 years ago
|
||
Attachment #8795330 -
Attachment is obsolete: true
Attachment #8795380 -
Flags: review+
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → lissyx+mozillians
Keywords: checkin-needed
Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 10•9 years ago
|
||
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/43a97503d564
Decouple Gonk TextureForwarder and CompositableForwarder (followup bug 1281456) r=nical
Comment 11•9 years ago
|
||
bugherder |
You need to log in
before you can comment on or make changes to this bug.
Description
•