Bug 1305655 - Decouple Gonk TextureForwarder and CompositableForwarder (followup bug 1281456) r=nical

MozReview-Commit-ID: 1sUiqnFEPdx