gfx/layers/opengl/GrallocTextureClient.h
@@ -75,6 +75,7 @@ public:
 
   virtual TextureData*
   CreateSimilar(LayersIPCChannel* aAllocator,
+                LayersBackend aLayersBackend,
                 TextureFlags aFlags = TextureFlags::DEFAULT,
                 TextureAllocationFlags aAllocFlags = ALLOC_DEFAULT) const override;
 
